maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:45: error: not found: value estFaceMu
  if (estFaceMu())
      ^